--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="icon" href="src/app-icon.ico" />
+		
+		<link rel="stylesheet" href="css/main.css">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app"/>
